# Cmai

./: .gitattributes  .gitignore  Check_Preprocess.py  Cmai.py  DeLAnO.yml  LICENSE.md  README.md  config.py  example.sh  get_env_path.sh  runBind.py  torch_a100.yml  wrapup_binary.py
.ipynb_checkpoints/: bc4.2b_fullval-checkpoint.ipynb  best_model_validation-checkpoint.ipynb  continuous model 0704-checkpoint.ipynb  kevin_bcTraining_v3_temp-checkpoint.ipynb  pairPro-checkpoint.py  pairPro2-checkpoint.py  pairPro4-checkpoint.py  pro11-checkpoint.py  rankValidate-checkpoint.ipynb  wrapup_binary-checkpoint.py
data/: example_get_binding_score.sh
data/background/: back1w_CDR3_dict.pkl  back1w_V_dict.pkl  background_antigens.fasta  default100.txt  default100_V_dict.pkl  default300.txt
data/example/: BCR_binding_score.csv  BCR_metrics.csv  Jun.sh  Jun_bcr.csv  RunIt_example.sh  binary_antigens.fasta  binary_example.csv  binding_results.csv  compare_results.csv  input.csv
data/example/output/: antigens.fasta  background_antigen_score_dict_10000BCRs.pkl  background_antigen_score_dict_10000BCRs_0.1Antigens.pkl  background_antigen_score_dict_10000BCRs_0.3Antigens.pkl  background_antigen_score_dict_1000BCRs.pkl  background_antigen_score_dict_1000BCRs_0.1Antigens.pkl  background_antigen_score_dict_100BCRs_0.01Antigens.pkl  background_antigen_score_dict_100BCRs_10Antigens.pkl  background_bcr_score_dict_0.3Antigens.pkl  background_bcr_score_dict_10000BCRs_0.1Antigens.pkl  background_bcr_score_dict_10000BCRs_0.3Antigens.pkl  background_bcr_score_dict_1000BCRs_0.1Antigens.pkl  background_bcr_score_dict_100BCRs_0.01Antigens.pkl  background_bcr_score_dict_100BCRs_10Antigens.pkl  background_score_dict.pkl  binding_results.csv  binding_results_no_rank.csv  binding_results_with_rank.csv  cdr3_seq.txt  encoded_CDR3.csv  encoded_V.csv  first100_CDR3_dict.pkl  log_test.txt  merged_results.csv  merged_results_no_rank.csv  merged_results_with_rank.csv  processed_input.csv  v_seq.txt
data/example/output/preprocess/: cleaned.antigen.Jun.fasta
data/example/output/results/data/: IDX  VCL_isoform2_.hhr
data/intermediates/: antigens.fasta  processed_input.csv
data/intermediates/preprocess/: cleaned.antigen.Jun1.fasta  cleaned.antigen.Jun2.fasta  cleaned.antigen.Jun3.fasta  input.fa
data/training_validation_data/: training_data_continuous.csv
docs/source/: conf.py  index.rst  installation.rst  license.rst  quickstart.rst
docs/source/change/: build.rst  contribution.rst  development.rst  index.rst  recent.rst  releases.rst
docs/source/documentation/: index.rst
docs/source/tutorial/: cli.rst  example.rst  step_by_step.rst  vram.rst
models/: Cmai.yml  bcrModel.pth  model.pth  runBC.yml  runBind.yml  runEmbed.yml
paras/: cutoff_table.txt  cutoff_table2.txt  env_path  rf_para.txt  runEmbed_path
rfscripts/: .gitignore  .gitmodules  make_msa.sh  test.fa  utils.py
scripts/: Calculate_binding_scores.R  Check_Preprocess.py  NPZtoPair.py  Preprocess.py  add_rank.py  config.py  get_bcr.py  runBind.py  runCompare.py  runEmbed.py  structure.py
scripts/rfold/: .gitignore  .pdm-python  README.md  config.py  gen_embed.py  gen_embed.sh  gen_msa.py  predict.py  pyproject.toml  rconfig.py  readme.org  rfpd.py  run.py
scripts/rfscripts/: dep.sh  gmsa.sh  model.py  predict.py  pyproject.toml  readme.org  rfpd.py  run.sh  setup.cfg  tofastas.py
scripts/wrapCDR3/: CDR3_example.txt  CDR3wrap.py  sepc-file.txt  torchEnv.yml
scripts/wrapCDR3/.ipynb_checkpoints/: CDR3_wrapup-checkpoint.py  CDR3wrap-checkpoint.py  CDR3wrap37-checkpoint.py  range_find_draft-checkpoint.ipynb
scripts/wrapV/: Atchley_factors.csv  RunIt.sh  V_example.txt  V_example_germline.txt  V_example_somatic.txt  V_mouse.csv  V_wrapup.py  Vwrap.py  encodedV.csv
wrapCDR3/: CDR3wrap.py  RunIt.sh
wrapV/: Atchley_factors.csv  V_human.csv  Vwrap.py
