[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Nasy", email = "nasyxx+git@gmail.com"},
]
dependencies = [
    "smile-config",
    "rich>=12.4.4",
    "biopython>=1.79",
    "fire>=0.4.0",
    "tqdm>=4.64.1",
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.961",
    "mypy-extensions>=0.4.3",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"


[tool.mypy]
python_executable = "python"
ignore_missing_imports = true
exclude = [
  "__pypackages__/",
]

[tool.isort]
py_version = 39

profile = "black"
group_by_package = true
color_output = true
combine_straight_imports = true


import_heading_stdlib = "Standard Library"


known_db = ["lucene", "lupyne", "elasticsearch", "sqlite", "shelve"]
import_heading_db = "Database"

known_tf = ["tensorflow", "keras"]
import_heading_tf = "Tensorflow"

known_torch = ["torch", "torchdata", "torchvision", "pytorch_lightning"]
import_heading_torch = "Torch"

known_types = ["typing", "types"]
import_heading_types = "Types"

known_config = ["config", "settings", "cfg", "smile_config"]
import_heading_config = "Config"

known_math = ["numpy", "scipy", "sklearn", "pandas"]
import_heading_math = "Math"

import_heading_thirdparty = "Others"

import_heading_localfolder = "Local"
known_localfolder = ["sites", "src"]

sections = ["FUTURE", "FIRSTPARTY", "STDLIB", "DB", "MATH", "TF", "TORCH", "CONFIG", "TYPES", "THIRDPARTY", "LOCALFOLDER"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = [
    "__pypackages__/3.10/lib"
]

exclude = [
    "**/__pycache__",
]
reportMissingTypeStubs = "information"

useLibraryCodeForTypes = true